Finito allegati comunicazioni

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -91,7 +91,11 @@ label.allegati=Allegati
 label.allegati_note_osservazioni=Allegati Note e Osservazioni
 label.allegati_note_osservazioni_integrazione_preavviso_rigetto=Note e Osservazioni sull'Integrazione e/o sul Preavviso di Rigetto
 label.allegato=Allegato
+label.allegatoComunicazione=Inserisci Allegato
+label.allegatoRisposta=Inserisci Allegato
+label.allegato_comunicazione=Allegato:
 label.allegato_non_inserito=Allegato non inserito
+label.allegato_risposta=Allegato:
 label.altro_personale=Altro personale
 label.ambito=Ambito:
 label.ambito_list=Ambito
