modifiche varie label e divisione riepilogo

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -176,7 +176,7 @@ label.da_inserire=(non inserito)
 label.da_integrare=Da integrare
 label.da_leggere=Da leggere
 label.da_pagare=Da pagare
-label.da_prendere_in_carica=Da prendere in carica
+label.da_prendere_in_carica=Da prendere in carico
 label.da_riassegnare=Da riassegnare ai Referee CRECM
 label.da_valutare=Da valutare
 label.da_valutare_integrazione=Di cui valutare l'integrazione
@@ -200,6 +200,7 @@ label.dati_del_richiedente=Richiedente
 label.dati_di_accreditamento=Dati di accreditamento
 label.dati_economici=Dati economici
 label.dati_economici_info=Dati non obbligatori. Se vengono compilati i dati diventa obbligatoria la presentazione dei documenti allegati.
+label.dati_legale=Dati del Legale
 label.dati_legale_login=Dati del\nLegale Rappresentante
 label.dati_non_inseriti= (dati non inseriti)
 label.dati_struttura=Dati della Struttura
@@ -328,9 +329,9 @@ label.label.rivaluta=Rivaluta
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
 label.list_eventi=Lista degli eventi del provider {0}
-label.listaDomandeDaPrendereInCarica=Lista delle Domande di Accreditamento da prendere in carica
-label.listaDomandeDaPrendereInCaricaProvvisorio=Lista delle Domande di Accreditamento Provvisorie da prendere in carica
-label.listaDomandeDaPrendereInCaricaStandard=Lista delle Domande di Accreditamento Standard da prendere in carica
+label.listaDomandeDaPrendereInCarica=Lista delle Domande di Accreditamento da prendere in carico
+label.listaDomandeDaPrendereInCaricaProvvisorio=Lista delle Domande di Accreditamento Provvisorie da prendere in carico
+label.listaDomandeDaPrendereInCaricaStandard=Lista delle Domande di Accreditamento Standard da prendere in carico
 label.listaDomandeDaRiassegnare=Lista delle Domande di Accreditamento da riassegnare
 label.listaDomandeDaRiassegnareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da riassegnare
 label.listaDomandeDaRiassegnareStandard=Lista delle Domande di Accreditamento Standard da riassegnare
@@ -456,8 +457,8 @@ label.piano_formativo_modificabile_fino_a=Piano formativo modificabile entro il 
 label.piva=PIVA
 label.posta_elettronica_certificata=Posta Elettronica Certificata (PEC)
 label.preavvisoRigetto=in preavviso di rigetto
-label.prendi_in_carica=Prendi in Carica
-label.presa_in_carico_da=Presa in carica da
+label.prendi_in_carica=Prendi in Carico
+label.presa_in_carico_da=Presa in carico da
 label.presa_visione=Presa visione
 label.prezzo=Prezzo
 label.privata=Privata
@@ -466,6 +467,7 @@ label.procedure_formative=Tipologie evento
 label.procedure_formative_tipologia=Tipologia dell'offerta formativa
 label.professione=Professione
 label.professioniAccreditamento=Accreditamento per professioni
+label.professioni_cui_evento_si_riferisce=Professioni a cui l'evento si riferisce
 label.professioni_discipline=Professioni / Discipline
 label.profili=Profili
 label.profilo=Profilo
@@ -497,6 +499,7 @@ label.riassegna_domanda_accreditamento=Riassegna la domanda di accreditamento
 label.ricevuta=Ricevuta
 label.ricevute=Ricevute
 label.ricevute_comunicazione_messaggio={0} Comunicazioni ricevute
+label.richiedente=Richiedente
 label.richiestaIntegrazione=in richiesta di integrazione
 label.richiesta_accreditamento=Richiesta di accreditamento
 label.richiesta_integrazione=Richiesta di Integrazione
@@ -677,3 +680,7 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.mostra_riepilogo_piano_formativo=Mostra riepilogo piano formativo
+label.riepilogo_piano_formativo=Riepilogo degli Eventi inseriti nel Piano Formativo
+label.menu_riepiloghi=Menù Riepiloghi
+label.rivaluta=Rivaluta
