valutazione commissione agganciata al flusso

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -292,6 +292,7 @@ label.info_provider=Informazioni del Provider
 label.info_richiesta_accreditamento=Info Richiesta Accreditamento
 label.inserimento_file_note=Inserimento Allegato (opzionale)
 label.inserimento_giorni_integrazione=Selezionare numero di giorni massimi in cui il Provider deve completare l'integrazione
+label.inserimento_numero_verbale=Inserire il numero del Verbale della Seduta
 label.inserimento_nuovo_piano_formativo=Inserimento del piano formativo
 label.inserimento_piano_formativo=Piano formativo relativo all''anno {0}
 label.inserimento_sede=Inserimento Sede
@@ -356,6 +357,7 @@ label.lista_sedute=Gestione Sedute
 label.locked=Bloccato
 label.lookup=Cerca
 label.menu_azioni=Menù Azioni
+label.menu_riepiloghi=Menù Riepiloghi
 label.mese=mese
 label.messaggi=Messaggi
 label.messaggio=Messaggio
@@ -375,6 +377,7 @@ label.modifica_seduta=Modifica della Seduta del {0}
 label.modifica_utente=Modifica Utente
 label.mostra=Mostra
 label.mostra_riepilogo=Mostra riepilogo domanda
+label.mostra_riepilogo_piano_formativo=Mostra riepilogo piano formativo
 label.mostra_riepilogo_valutazioni=Mostra riepilogo valutazione
 label.mostra_valutazione=Mostra valutazione
 label.mostra_valutazioni_complessive=Mostra valutazioni complessive
@@ -509,6 +512,7 @@ label.richieste_accreditamento=Richieste di accreditamento
 label.richieste_standard_accreditamento=Richieste di accreditamento Standard
 label.ricordami=Ricordami
 label.riepilogo_accreditamento=Domanda di Accreditamento {0} ({1})
+label.riepilogo_piano_formativo=Riepilogo degli Eventi inseriti nel Piano Formativo
 label.riepilogo_valutazione_accreditamento=Valutazione dell''Accreditamento {0} ({1})
 label.riepilogo_valutazioni_complessive=Riepilogo delle Valutazioni Complessive
 label.rimuovi=Rimuovi
@@ -517,6 +521,7 @@ label.rispondi=Rispondi
 label.risposta=Risposta
 label.risposta_a_comunicazione=Nuova Risposta alla Comunicazione
 label.risposta_del_provider=Risposta del Provider
+label.rivaluta=Rivaluta
 label.ruolo=Ruolo
 label.salva=Salva
 label.scegli_file=Scegli file
@@ -640,6 +645,7 @@ message.errore_eccezione=Errore lato server.(EXCEPTION)
 message.errore_eliminazione_valutazioni_presenti=Non è possibile eliminare la Seduta fintanto che vi saranno Domande inserite nell'Ordine del Giorno.
 message.errore_fileupload=Siamo spiacenti si è verificato un errore durante l'upload del file
 message.errore_generico=Siamo spiacenti a causa di un errore non è stato possibile portare a termine la richiesta.
+message.errore_inserimento_numero_verbale=\u00C8 obbligatorio inserire il numero del Verbale
 message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
@@ -680,7 +686,4 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.mostra_riepilogo_piano_formativo=Mostra riepilogo piano formativo
-label.riepilogo_piano_formativo=Riepilogo degli Eventi inseriti nel Piano Formativo
-label.menu_riepiloghi=Menù Riepiloghi
-label.rivaluta=Rivaluta
+label.n_verbale=Verbale numero
