--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -687,3 +687,134 @@ month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
 label.n_verbale=Verbale numero
+
+
+IdFieldEnum.PROVIDER__TIPO_ORGANIZZATORE=Provider Tipo Organizzazione
+IdFieldEnum.PROVIDER__DENOMINAZIONE_LEGALE=Provider Denominazione
+IdFieldEnum.PROVIDER__PARTITA_IVA=Provider Partita Iva
+IdFieldEnum.PROVIDER__CODICE_FISCALE=Provider Codice Fiscale
+IdFieldEnum.PROVIDER__RAGIONE_SOCIALE=Provider Ragione sociale
+IdFieldEnum.PROVIDER__EMAIL_STRUTTURA=Provider Email
+IdFieldEnum.PROVIDER__NATURA_ORGANIZZAZIONE=Provider Naturqa Organizzazione 
+IdFieldEnum.PROVIDER__NO_PROFIT=Provider  No Profit
+
+IdFieldEnum.LEGALE_RAPPRESENTANTE__FULL=Sostituzione Legale Rappresentante 
+IdFieldEnum.LEGALE_RAPPRESENTANTE__COGNOME=Modifica Cognome Legale Rappresentante
+IdFieldEnum.LEGALE_RAPPRESENTANTE__NOME=Modifica Nome Legale Rappresentante
+IdFieldEnum.LEGALE_RAPPRESENTANTE__CODICEFISCALE=Modifica Codice fiscale Legale Rappresentante
+IdFieldEnum.LEGALE_RAPPRESENTANTE__TELEFONO=Modifica Telefono Legale Rappresentante
+IdFieldEnum.LEGALE_RAPPRESENTANTE__CELLULARE=Modifica Cellulare Legale Rappresentante
+IdFieldEnum.LEGALE_RAPPRESENTANTE__EMAIL=Modifica Email Legale Rappresentante
+IdFieldEnum.LEGALE_RAPPRESENTANTE__PEC=Modifica Pec Legale Rappresentante
+IdFieldEnum.LEGALE_RAPPRESENTANTE__ATTO_NOMINA=Modifica Atto Nomina Legale Rappresentante
+IdFieldEnum.LEGALE_RAPPRESENTANTE__CV=Modifica CV Legale Rappresentante
+
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__FULL=Modifica Delegato Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__COGNOME=Modifica Delegato Cognome Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__NOME=Modifica Delegato Nome Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CODICEFISCALE=Modifica Delegato Codice fiscale Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__TELEFONO=Modifica Delegato Telefono Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CELLULARE=Modifica Delegato Cellulare Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__EMAIL=Modifica Delegato Email Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__DELEGA=Modifica Delega Delegato Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CV=Modifica CV Delegato Legale Rappresentante
+
+IdFieldEnum.SEDE__IS_LEGALE=
+IdFieldEnum.SEDE__IS_OPERATIVA=
+IdFieldEnum.SEDE__PROVINCIA=
+IdFieldEnum.SEDE__COMUNE=
+IdFieldEnum.SEDE__INDIRIZZO=
+IdFieldEnum.SEDE__CAP=
+IdFieldEnum.SEDE__TELEFONO=
+IdFieldEnum.SEDE__FAX=
+IdFieldEnum.SEDE__EMAIL=
+
+IdFieldEnum.DATI_ACCREDITAMENTO__TIPOLOGIA_ACCREDITAMENTO=
+IdFieldEnum.DATI_ACCREDITAMENTO__PROCEDURE_FORMATIVE=
+IdFieldEnum.DATI_ACCREDITAMENTO__PROFESSIONI_ACCREDITAMENTO=
+IdFieldEnum.DATI_ACCREDITAMENTO__DISCIPLINE=
+
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_UNO=
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_DUE=
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_TRE=
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO=
+
+IdFieldEnum.DATI_ACCREDITAMENTO__ESTRATTO_BILANCIO_COMPLESSIVO=
+
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_UNO=
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_DUE=
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_TRE=
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE=
+
+IdFieldEnum.DATI_ACCREDITAMENTO__ESTRATTO_BILANCIO_FORMAZIONE=
+
+IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_TEMPO_INDETERMINATO=
+IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_ALTRO=
+IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI=
+
+IdFieldEnum.DATI_ACCREDITAMENTO__ORGANIGRAMMA=
+IdFieldEnum.DATI_ACCREDITAMENTO__FUNZIONIGRAMMA=
+
+IdFieldEnum.RESPONSABILE_SEGRETERIA__FULL=
+IdFieldEnum.RESPONSABILE_SEGRETERIA__COGNOME=
+IdFieldEnum.RESPONSABILE_SEGRETERIA__NOME=
+IdFieldEnum.RESPONSABILE_SEGRETERIA__CODICEFISCALE=
+IdFieldEnum.RESPONSABILE_SEGRETERIA__TELEFONO=
+IdFieldEnum.RESPONSABILE_SEGRETERIA__EMAIL=
+IdFieldEnum.RESPONSABILE_SEGRETERIA__ATTO_NOMINA=
+IdFieldEnum.RESPONSABILE_SEGRETERIA__CV=
+
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__FULL=
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__COGNOME=
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__NOME=
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__CODICEFISCALE=
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__TELEFONO=
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__EMAIL=
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__ATTO_NOMINA=
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__CV=
+
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__FULL=
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__COGNOME=
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__NOME=
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__CODICEFISCALE=
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__TELEFONO=
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__EMAIL=
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__ATTO_NOMINA=
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__CV=
+
+IdFieldEnum.RESPONSABILE_QUALITA__FULL=
+IdFieldEnum.RESPONSABILE_QUALITA__COGNOME=
+IdFieldEnum.RESPONSABILE_QUALITA__NOME=
+IdFieldEnum.RESPONSABILE_QUALITA__CODICEFISCALE=
+IdFieldEnum.RESPONSABILE_QUALITA__TELEFONO=
+IdFieldEnum.RESPONSABILE_QUALITA__EMAIL=
+IdFieldEnum.RESPONSABILE_QUALITA__ATTO_NOMINA=
+IdFieldEnum.RESPONSABILE_QUALITA__CV=
+
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__NOME=
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__TELEFONO=
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__EMAIL=
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__PROFESSIONE=
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CV=
+
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ATTO_COSTITUIVO=
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_ESCLUSIONE=
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ESPERIENZA_FORMAZIONE=
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__UTILIZZO=
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__PIANO_QUALITA=
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_LEGALE=
+
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__PROCEDURA_FORMATIVA=
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__TITOLO=
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__OBIETTIVO_NAZIONALE=
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__OBIETTIVO_REGIONALE=
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__PROFESSIONI_EVENTO=
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__DISCIPLINE=
+
+IdFieldEnum.SEDE__FULL=
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__FULL=
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__FULL=
