finito template file accreditamento (documenti) e vaschetta ODG

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -687,7 +687,12 @@ month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
 label.n_verbale=Verbale numero
-
+label.documenti_della_domanda=Documenti della Domanda di Accreditamento
+label.decreto_accreditamento=Decreto Accreditamento
+label.decreto_diniego=Decreto Diniego
+label.richiesta_preavviso_rigetto=Richiesta Preavviso di Rigetto
+label.documenti=Documenti
+label.da_inserire_nel_odg=Da inserire nell'ordine del giorno
 
 IdFieldEnum.PROVIDER__TIPO_ORGANIZZATORE=Provider Tipo Organizzazione
 IdFieldEnum.PROVIDER__DENOMINAZIONE_LEGALE=Provider Denominazione
@@ -695,10 +700,10 @@ IdFieldEnum.PROVIDER__PARTITA_IVA=Provider Partita Iva
 IdFieldEnum.PROVIDER__CODICE_FISCALE=Provider Codice Fiscale
 IdFieldEnum.PROVIDER__RAGIONE_SOCIALE=Provider Ragione sociale
 IdFieldEnum.PROVIDER__EMAIL_STRUTTURA=Provider Email
-IdFieldEnum.PROVIDER__NATURA_ORGANIZZAZIONE=Provider Naturqa Organizzazione 
+IdFieldEnum.PROVIDER__NATURA_ORGANIZZAZIONE=Provider Naturqa Organizzazione
 IdFieldEnum.PROVIDER__NO_PROFIT=Provider  No Profit
 
-IdFieldEnum.LEGALE_RAPPRESENTANTE__FULL=Sostituzione Legale Rappresentante 
+IdFieldEnum.LEGALE_RAPPRESENTANTE__FULL=Sostituzione Legale Rappresentante
 IdFieldEnum.LEGALE_RAPPRESENTANTE__COGNOME=Modifica Cognome Legale Rappresentante
 IdFieldEnum.LEGALE_RAPPRESENTANTE__NOME=Modifica Nome Legale Rappresentante
 IdFieldEnum.LEGALE_RAPPRESENTANTE__CODICEFISCALE=Modifica Codice fiscale Legale Rappresentante
