--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -141,6 +141,7 @@ label.chiudi_tutte=Chiudi tutte
 label.chiusa=Chiusa
 label.chiuse=Chiuse
 label.chiuse_comunicazione_messaggio={0} Comunicazioni chiuse
+label.chiudi_seduta=Chiudi Seduta
 label.codiceFiscaleOrIVA=Codice fiscale / Partita IVA
 label.codiceFiscaleOrIVAProvider=Codice Fiscale / Partita IVA Provider
 label.codice_fiscale=Codice Fiscale
