Completate le label per creazione PDF relativo ai Field Editabili

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -715,112 +715,112 @@ IdFieldEnum.LEGALE_RAPPRESENTANTE__PEC=Modifica Pec Legale Rappresentante
 IdFieldEnum.LEGALE_RAPPRESENTANTE__ATTO_NOMINA=Modifica Atto Nomina Legale Rappresentante
 IdFieldEnum.LEGALE_RAPPRESENTANTE__CV=Modifica CV Legale Rappresentante
 
-IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__FULL=Modifica Delegato Legale Rappresentante
-IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__COGNOME=Modifica Delegato Cognome Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__FULL=Sostituzione Delegato Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__COGNOME=Modifica Cognome Delegato Legale Rappresentante
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__NOME=Modifica Delegato Nome Legale Rappresentante
-IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CODICEFISCALE=Modifica Delegato Codice fiscale Legale Rappresentante
-IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__TELEFONO=Modifica Delegato Telefono Legale Rappresentante
-IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CELLULARE=Modifica Delegato Cellulare Legale Rappresentante
-IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__EMAIL=Modifica Delegato Email Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CODICEFISCALE=Modifica Codice fiscale Delegato Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__TELEFONO=Modifica Telefono Delegato Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CELLULARE=Modifica Cellulare Delegato  Legale Rappresentante
+IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__EMAIL=Modifica Email Delegato Legale Rappresentante
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__DELEGA=Modifica Delega Delegato Legale Rappresentante
 IdFieldEnum.DELEGATO_LEGALE_RAPPRESENTANTE__CV=Modifica CV Delegato Legale Rappresentante
 
-IdFieldEnum.SEDE__IS_LEGALE=
-IdFieldEnum.SEDE__IS_OPERATIVA=
-IdFieldEnum.SEDE__PROVINCIA=
-IdFieldEnum.SEDE__COMUNE=
-IdFieldEnum.SEDE__INDIRIZZO=
-IdFieldEnum.SEDE__CAP=
-IdFieldEnum.SEDE__TELEFONO=
-IdFieldEnum.SEDE__FAX=
-IdFieldEnum.SEDE__EMAIL=
+IdFieldEnum.SEDE__IS_LEGALE=Modifica Tipologia Sede
+IdFieldEnum.SEDE__IS_OPERATIVA=Modifica Tipologia Sede
+IdFieldEnum.SEDE__PROVINCIA=Modifica Provincia Sede
+IdFieldEnum.SEDE__COMUNE=Modifica Comune Sede
+IdFieldEnum.SEDE__INDIRIZZO=Modifica Indirizzo Sede
+IdFieldEnum.SEDE__CAP=Modifica Cap Sede
+IdFieldEnum.SEDE__TELEFONO=Modifica Telefono Sede
+IdFieldEnum.SEDE__FAX=Modifica Fax Sede
+IdFieldEnum.SEDE__EMAIL=Modifica Email Sede
 
-IdFieldEnum.DATI_ACCREDITAMENTO__TIPOLOGIA_ACCREDITAMENTO=
-IdFieldEnum.DATI_ACCREDITAMENTO__PROCEDURE_FORMATIVE=
-IdFieldEnum.DATI_ACCREDITAMENTO__PROFESSIONI_ACCREDITAMENTO=
-IdFieldEnum.DATI_ACCREDITAMENTO__DISCIPLINE=
+IdFieldEnum.DATI_ACCREDITAMENTO__TIPOLOGIA_ACCREDITAMENTO=Modifica Tiplogia Accreditamento
+IdFieldEnum.DATI_ACCREDITAMENTO__PROCEDURE_FORMATIVE=Modifica Procedure Formative Accreditamento
+IdFieldEnum.DATI_ACCREDITAMENTO__PROFESSIONI_ACCREDITAMENTO=Modifica Professioni Accreditamento
+IdFieldEnum.DATI_ACCREDITAMENTO__DISCIPLINE=Modifica Discipline Accreditamento
 
-IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_UNO=
-IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_DUE=
-IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_TRE=
-IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO=
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_UNO=Modifica Fatturato Complessivo Primo Anno
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_DUE=Modifica Fatturato Complessivo Secondo Anno
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO_TRE=Modifica Fatturato Complessivo Terzo Anno
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_COMPLESSIVO=Modifica Fatturato o Costi complessivi degli ultimi 3 anni
 
-IdFieldEnum.DATI_ACCREDITAMENTO__ESTRATTO_BILANCIO_COMPLESSIVO=
+IdFieldEnum.DATI_ACCREDITAMENTO__ESTRATTO_BILANCIO_COMPLESSIVO=Modifica Estratto del bilancio complessivo degli ultimi 3 anni
 
-IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_UNO=
-IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_DUE=
-IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_TRE=
-IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE=
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_UNO=Modifica Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_DUE=Modifica Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE_TRE=Modifica Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
+IdFieldEnum.DATI_ACCREDITAMENTO__FATTURATO_FORMAZIONE=Modifica Fatturato o Costi dedicati alla formazione del personale sanitario degli ultimi 3 anni
 
-IdFieldEnum.DATI_ACCREDITAMENTO__ESTRATTO_BILANCIO_FORMAZIONE=
+IdFieldEnum.DATI_ACCREDITAMENTO__ESTRATTO_BILANCIO_FORMAZIONE=Modifica Estratto del bilancio relativo alla formazione in ambito sanitario degli ultimi tre anni e budget previsionale
 
-IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_TEMPO_INDETERMINATO=
-IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_ALTRO=
-IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI=
+IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_TEMPO_INDETERMINATO=Modifica Numero dipendenti dedicati alla formazione (Tempo Indeterminato)
+IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI_FORMAZIONE_ALTRO=Modifica Numero dipendenti dedicati alla formazione (Altro personale)
+IdFieldEnum.DATI_ACCREDITAMENTO__NUMERO_DIPENDENTI=Modifica Numero dipendenti dedicati alla formazione
 
-IdFieldEnum.DATI_ACCREDITAMENTO__ORGANIGRAMMA=
-IdFieldEnum.DATI_ACCREDITAMENTO__FUNZIONIGRAMMA=
+IdFieldEnum.DATI_ACCREDITAMENTO__ORGANIGRAMMA=Modifica Organigramma
+IdFieldEnum.DATI_ACCREDITAMENTO__FUNZIONIGRAMMA=Modifica Funzionigramma
 
-IdFieldEnum.RESPONSABILE_SEGRETERIA__FULL=
-IdFieldEnum.RESPONSABILE_SEGRETERIA__COGNOME=
-IdFieldEnum.RESPONSABILE_SEGRETERIA__NOME=
-IdFieldEnum.RESPONSABILE_SEGRETERIA__CODICEFISCALE=
-IdFieldEnum.RESPONSABILE_SEGRETERIA__TELEFONO=
-IdFieldEnum.RESPONSABILE_SEGRETERIA__EMAIL=
-IdFieldEnum.RESPONSABILE_SEGRETERIA__ATTO_NOMINA=
-IdFieldEnum.RESPONSABILE_SEGRETERIA__CV=
+IdFieldEnum.RESPONSABILE_SEGRETERIA__FULL=Sostituzione Responsabile Segreteria
+IdFieldEnum.RESPONSABILE_SEGRETERIA__COGNOME=Modifica Cognome Responsabile Segreteria
+IdFieldEnum.RESPONSABILE_SEGRETERIA__NOME=Modifica Nome Responsabile Segreteria
+IdFieldEnum.RESPONSABILE_SEGRETERIA__CODICEFISCALE=Modifica Codice Fiscale Responsabile Segreteria
+IdFieldEnum.RESPONSABILE_SEGRETERIA__TELEFONO=Modifica Telefono Responsabile Segreteria
+IdFieldEnum.RESPONSABILE_SEGRETERIA__EMAIL=Modifica Email Responsabile Segreteria
+IdFieldEnum.RESPONSABILE_SEGRETERIA__ATTO_NOMINA=Modifica Atto Nomina Responsabile Segreteria
+IdFieldEnum.RESPONSABILE_SEGRETERIA__CV=Modifica CV Responsabile Segreteria
 
-IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__FULL=
-IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__COGNOME=
-IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__NOME=
-IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__CODICEFISCALE=
-IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__TELEFONO=
-IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__EMAIL=
-IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__ATTO_NOMINA=
-IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__CV=
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__FULL=Sostituzione Responsabile Amministrativo
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__COGNOME=Modifica Cognome Responsabile Amministrativo
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__NOME=Modifica Nome Responsabile Amministrativo
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__CODICEFISCALE=Modifica Codice Fiscale Responsabile Amministrativo
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__TELEFONO=Modifica Telefono Responsabile Amministrativo
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__EMAIL=Modifica Email Responsabile Amministrativo
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__ATTO_NOMINA=Modifica Atto Nomina Responsabile Amministrativo
+IdFieldEnum.RESPONSABILE_AMMINISTRATIVO__CV=Modifica CV Responsabile Amministrativo
 
-IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__FULL=
-IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__COGNOME=
-IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__NOME=
-IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__CODICEFISCALE=
-IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__TELEFONO=
-IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__EMAIL=
-IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__ATTO_NOMINA=
-IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__CV=
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__FULL=Sostituzione Responsabile Informatico
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__COGNOME=Modifica Cognome Responsabile Informatico
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__NOME=Modifica Nome Responsabile Informatico
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__CODICEFISCALE=Modifica Codice Fiscale Responsabile Informatico
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__TELEFONO=Modifica Telefono Responsabile Informatico
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__EMAIL=Modifica Email Responsabile Informatico
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__ATTO_NOMINA=Modifica Atto Nomina Responsabile Informatico
+IdFieldEnum.RESPONSABILE_SISTEMA_INFORMATICO__CV=Modifica CV Responsabile Informatico
 
-IdFieldEnum.RESPONSABILE_QUALITA__FULL=
-IdFieldEnum.RESPONSABILE_QUALITA__COGNOME=
-IdFieldEnum.RESPONSABILE_QUALITA__NOME=
-IdFieldEnum.RESPONSABILE_QUALITA__CODICEFISCALE=
-IdFieldEnum.RESPONSABILE_QUALITA__TELEFONO=
-IdFieldEnum.RESPONSABILE_QUALITA__EMAIL=
-IdFieldEnum.RESPONSABILE_QUALITA__ATTO_NOMINA=
-IdFieldEnum.RESPONSABILE_QUALITA__CV=
+IdFieldEnum.RESPONSABILE_QUALITA__FULL=Sostituzione Responsabile Qualità
+IdFieldEnum.RESPONSABILE_QUALITA__COGNOME=Modifica Cognome Responsabile Qualità
+IdFieldEnum.RESPONSABILE_QUALITA__NOME=Modifica Nome Responsabile Qualità
+IdFieldEnum.RESPONSABILE_QUALITA__CODICEFISCALE=Modifica Codice Fiscale Responsabile Qualità
+IdFieldEnum.RESPONSABILE_QUALITA__TELEFONO=Modifica Telefono Responsabile Qualità
+IdFieldEnum.RESPONSABILE_QUALITA__EMAIL=Modifica Email Responsabile Qualità
+IdFieldEnum.RESPONSABILE_QUALITA__ATTO_NOMINA=Modifica Atto Nomina Responsabile Qualità
+IdFieldEnum.RESPONSABILE_QUALITA__CV=Modifica CV Responsabile Qualità
 
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__NOME=
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__TELEFONO=
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__EMAIL=
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__PROFESSIONE=
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CV=
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__COGNOME=Modifica Cognome Componente Comitato Scientifico
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__NOME=Modifica Nome Componente Comitato Scientifico
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CODICEFISCALE=Modifica Codice Fiscale Componente Comitato Scientifico
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__TELEFONO=Modifica Telefono Componente Comitato Scientifico
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__EMAIL=Modifica Email Componente Comitato Scientifico
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__PROFESSIONE=Modifica Professione Componente Comitato Scientifico
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__ATTO_NOMINA=Modifica Atto Nomina Componente Comitato Scientifico
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__CV=Modifica CV Componente Comitato Scientifico
 
-IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ATTO_COSTITUIVO=
-IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_ESCLUSIONE=
-IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ESPERIENZA_FORMAZIONE=
-IdFieldEnum.ACCREDITAMENTO_ALLEGATI__UTILIZZO=
-IdFieldEnum.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=
-IdFieldEnum.ACCREDITAMENTO_ALLEGATI__PIANO_QUALITA=
-IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_LEGALE=
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ATTO_COSTITUIVO=Modifica Atto Costitutivo e statuto
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_ESCLUSIONE=Modifica Dichiarazione esclusione conflitto di interessi per l’oggetto sociale
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__ESPERIENZA_FORMAZIONE=Modifica Esperienza formazione in ambito sanitario 
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__UTILIZZO=Modifica Utilizzo di sedi, strutture ed attrezzature di altro soggetto
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__SISTEMA_INFORMATICO=Modifica Sistema informatico dedicato alla formazione in ambito sanitario
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__PIANO_QUALITA=Modifica Piano di Qualità
+IdFieldEnum.ACCREDITAMENTO_ALLEGATI__DICHIARAZIONE_LEGALE=Modifica Dichiarazione del Legale Rappresentante
 
-IdFieldEnum.EVENTO_PIANO_FORMATIVO__PROCEDURA_FORMATIVA=
-IdFieldEnum.EVENTO_PIANO_FORMATIVO__TITOLO=
-IdFieldEnum.EVENTO_PIANO_FORMATIVO__OBIETTIVO_NAZIONALE=
-IdFieldEnum.EVENTO_PIANO_FORMATIVO__OBIETTIVO_REGIONALE=
-IdFieldEnum.EVENTO_PIANO_FORMATIVO__PROFESSIONI_EVENTO=
-IdFieldEnum.EVENTO_PIANO_FORMATIVO__DISCIPLINE=
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__PROCEDURA_FORMATIVA=Modifica Procedura Formativa Evento
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__TITOLO=Modifica Titolo Formativa Evento
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__OBIETTIVO_NAZIONALE=Modifica Obiettivo Nazionale Formativa Evento
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__OBIETTIVO_REGIONALE=Modifica Obiettivo Regionale Evento
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__PROFESSIONI_EVENTO=Modifica Professione Evento
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__DISCIPLINE=Modifica Discipline Evento
 
-IdFieldEnum.SEDE__FULL=
-IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__FULL=
-IdFieldEnum.EVENTO_PIANO_FORMATIVO__FULL=
+IdFieldEnum.SEDE__FULL=Sostituzione Sede
+IdFieldEnum.COMPONENTE_COMITATO_SCIENTIFICO__FULL=Modifica Comitato Scientifico
+IdFieldEnum.EVENTO_PIANO_FORMATIVO__FULL=Sostituzione Evento
