--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -764,7 +764,6 @@ label.valutazione_domande_seduta=Valutazione delle Domande della Seduta del {0}
 label.valutazioni=Valutazioni
 label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
-label.valutazioni_non_date=Valutazione non date (consecutivamente)
 label.valutazioni_precedenti=Valutazioni precedenti
 label.vedi_tutte=Vedi tutte
 label.visualizza=Visualizza
@@ -843,3 +842,7 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
+label.lista_valutazioni_non_date=Lista Valutazioni non date (consecutivamente)
+label.vedi_lista=Vedi lista
+message.inserire_almeno_sede_legale=\u00C8 necessario inserire almeno una Sede Legale
