cambiate label referee

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,23 +1,3 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ######## LABEL ########
 #message.errore_eccezione=Dom, non so come dirtelo, ma si è spaccato tutto... di nuovo
 Email=email non valida
@@ -242,7 +222,7 @@ label.applica=Applica
 label.apri_tutte=Apri tutte
 label.archivia=Archivia
 label.assegna=Assegna
-label.assegna_nuovo_gruppo=Assegna Nuovo Gruppo
+label.assegna_nuovo_gruppo=Assegna Nuovi Referee
 label.assegna_stesso_gruppo=Fai valutare Integrazione
 label.attenzione=Attenzione!
 label.attoCostitutivo=Atto Costitutivo e statuto
@@ -498,6 +478,7 @@ label.lista_persone=Lista delle persone del provider {0}
 label.lista_piani_formativi=Lista dei piani formativi inseriti
 label.lista_referee=Lista dei Referee
 label.lista_sedute=Gestione Sedute
+label.lista_valutazioni_non_date=Lista Valutazioni non date (consecutivamente)
 label.locked=Bloccato
 label.lookup=Cerca
 label.menu_azioni=Menù Azioni
@@ -572,6 +553,7 @@ label.note_osservazioni_integrazione=Note e Osservazioni sull'Integrazione
 label.note_osservazioni_preavviso_rigetto=Note e Osservazioni sul Preavviso di Rigetto
 label.numero_dipendenti_title=Numero dipendenti dedicati alla formazione
 label.numero_minimo_comitato=Il Comitato Scientifico deve essere composto da un Coordinatore e almeno 4 Componenti
+label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
 label.nuova=Nuova
 label.nuova_comunicazione=Nuova Comunicazione
 label.nuova_comunicazione=Nuova Comunicazione
@@ -765,6 +747,7 @@ label.valutazioni=Valutazioni
 label.valutazioni_complessive=Valutazioni Complessive
 label.valutazioni_effettuate=Tabella delle Valutazioni {0}
 label.valutazioni_precedenti=Valutazioni precedenti
+label.vedi_lista=Vedi lista
 label.vedi_tutte=Vedi tutte
 label.visualizza=Visualizza
 label.visualizza_altri=Visualizza tutte le valutazioni
@@ -805,6 +788,7 @@ message.evento_salvato=I dati dell''evento sono stati salvati successo.
 message.gruppoCrecm_riassegnato=Domanda riassegnata ai Referee con successo!
 message.impossibile_inserire_seduta_nel_passato=Impossibile inserire una Seduta in una data precedente a quella di oggi.
 message.info_login=Le credenziali di accesso sono utili per accedere al sistema e procedere all’invio della domanda di accreditamento provvisorio come Provider regionale ECM.\nPer la registrazione sarà necessario compilare tutti i campi ricordando che quelli contrassegnati da un asterisco sono obbligatori.\nSi ricorda che all’indirizzo email inserito, sarà inviata la password per il primo accesso e ogni comunicazione successiva relativa all’accesso e all’utenza del provider in generale.
+message.inserire_almeno_sede_legale=\u00C8 necessario inserire almeno una Sede Legale
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserire_il_rendiconto=Inserire il file da elaborare!
 message.inserito=Il {0} è stato salvato con successo.
@@ -828,7 +812,7 @@ message.utente_salvato=L'utente è stato salvato con successo.
 message.valutazione_commissione_salvata=Valutazione della Commissione e Stato della Domanda di Accreditamento salvati
 message.valutazione_complessiva_salvata=La Valutazione dell'Accreditamento è stata salvata con successo.
 message.valutazione_salvata=Valutazione e note salvate con successo!
-message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata al gruppo CRECM con successo.
+message.valutazione_salvata_gruppo_riassegnato=Valutazione salvata e riassegnata ai Referee CRECM con successo.
 message.warning=Attenzione
 month.agosto=Agosto
 month.aprile=Aprile
@@ -842,7 +826,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.numero_valutazioni_non_date=Numero Valutazioni non date (consecutivamente)
-label.lista_valutazioni_non_date=Lista Valutazioni non date (consecutivamente)
-label.vedi_lista=Vedi lista
-message.inserire_almeno_sede_legale=\u00C8 necessario inserire almeno una Sede Legale
