--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -293,7 +293,7 @@ label.da_integrare=Da integrare
 label.da_leggere=Da leggere
 label.da_pagare=Da pagare
 label.da_prendere_in_carica=Da prendere in carico
-label.da_riassegnare=Da riassegnare ai Referee CRECM
+label.da_riassegnare=Da riassegnare ai Referee
 label.da_valutare=Da valutare
 label.da_valutare_integrazione=Di cui valutare l'integrazione
 label.dashboard=Dashboard
