Modellazione Eventi WIP RES inizio GUI

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -764,6 +764,7 @@ label.visualizzazione_comunicazione=Visualizzazione Comunicazione
 label.visualizzazione_piano_formativo=Visualizzazione del piano formativo
 label.visualizzazione_seduta=Visualizzazione dati della Seduta {0}
 message.accesso_negato=ACCESSO NEGATO
+message.accreditamento_not_trovato=Nessun accreditamento attivo trovato
 message.allegati_inseriti=I file degli allegati sono stati inseriti con successo.
 message.campi_salvati=Campi abilitati/disabilitati con successo!
 message.compilare_altre_tab=Prima di accedere alla tab di inserimento del Piano Formativo è necessario compilare tutte le altre sezioni.
