per segreteria/referee dati dei valutatori nella lista dell'accreditam.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -398,6 +398,7 @@ label.homepage=Homepage ECM - Regione Veneto
 label.id=Id
 label.in_attesa_attivazione=In attesa di attivazione
 label.in_preavviso_di_rigetto=In Preavviso di Rigetto
+label.in_preavviso_rigetto=In preavviso di rigetto
 label.in_richiesta_integrazione=In Richiesta di Integrazione
 label.in_scadenza=In scadenza nei prossimi 30 giorni
 label.incarico_presso_la_struttura=Incarico presso la struttura
@@ -461,9 +462,11 @@ label.listaDomandeDaRiassegnare=Lista delle Domande di Accreditamento da riasseg
 label.listaDomandeDaRiassegnareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da riassegnare
 label.listaDomandeDaRiassegnareStandard=Lista delle Domande di Accreditamento Standard da riassegnare
 label.listaDomandeDaValutare=Lista delle Domande di Accreditamento da valutare
+label.listaDomandeDaValutareIntegrazione=Lista Domande di Accreditamento di cui valutare l'integrazione
 label.listaDomandeDaValutareProvvisorio=Lista delle Domande di Accreditamento Provvisorie da valutare
 label.listaDomandeDaValutareStandard=Lista delle Domande di Accreditamento Standard da valutare
 label.listaDomandeInScadenza=Lista delle Domande di Accreditamento in scadenza (nei prossimi 10 giorni)
+label.listaDomandeNonValutate=Lista delle ultime Domande di Accreditamento di cui non è stata fornita una valutazione
 label.listaDomandePreavvisoRigetto=Lista delle Domande di Accreditamento in preavviso di rigetto
 label.listaDomandePreavvisoRigettoProvvisorio=Lista delle Domande di Accreditamento Provvisorie in preavviso di rigetto
 label.listaDomandePreavvisoRigettoStandard=Lista delle Domande di Accreditamento Standard in preavviso di rigetto
@@ -478,6 +481,7 @@ label.lista_persone=Lista delle persone del provider {0}
 label.lista_piani_formativi=Lista dei piani formativi inseriti
 label.lista_referee=Lista dei Referee
 label.lista_sedute=Gestione Sedute
+label.lista_valutatori=Lista dei Valutatori
 label.lista_valutazioni_non_date=Lista Valutazioni non date (consecutivamente)
 label.locked=Bloccato
 label.lookup=Cerca
@@ -682,7 +686,7 @@ label.seleziona_altro_ODG=Seleziona l'Ordine Del Giorno nel quale spostare la do
 label.seleziona_anagrafica=Seleziona anagrafica esistente
 label.seleziona_anno=Seleziona l'anno del piano formativo
 label.seleziona_button=Seleziona
-label.seleziona_referee=Seleziona 3 Referee per la valutazione dell'Accreditamento
+label.seleziona_referee=Seleziona {0} Referee per la valutazione dell'Accreditamento
 label.seleziona_referee_necessari=Seleziona {0} Referee a cui assegnare la domanda
 label.settimana=settimana
 label.settoriale=Settoriale
@@ -792,6 +796,7 @@ message.inserire_almeno_sede_legale=\u00C8 necessario inserire almeno una Sede L
 message.inserire_campi_required=Si prega di ricontrollare i campi obbligatori segnati in rosso.
 message.inserire_il_rendiconto=Inserire il file da elaborare!
 message.inserito=Il {0} è stato salvato con successo.
+message.invio_integrazione_success=Integrazione della Domanda di Accreditamento effettuata con successo.
 message.legale_non_piu_modificabile=Registrando un responsabile non sarà più possibile modificare i dati relativi al Rappresentante Legale.
 message.mail_inviata=Email inviata
 message.password_cambiata=La password è stata cambiata con successo.
@@ -826,5 +831,3 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
-label.in_preavviso_rigetto=In preavviso di rigetto
-message.invio_integrazione_success=Integrazione della Domanda di Accreditamento effettuata con successo.
