cambiata vaschetta segreteria ins_odg e logica per inserimento in ODG
ora è possibile inserire una domanda nella seduta del'ODG solo se non è
già stata inserita in un altra seduta NON bloccata

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -455,6 +455,7 @@ label.label.rivaluta=Rivaluta
 label.legale_radio=Il richiedente è il Legale Rappresentante
 label.legale_rappresentante=Legale Rappresentante
 label.list_eventi=Lista degli eventi del provider {0}
+label.listaDomandeDaInserireInODG=Lista delle Domande di Accreditamento da inserire nell'Ordine Del Giorno
 label.listaDomandeDaPrendereInCarica=Lista delle Domande di Accreditamento da prendere in carico
 label.listaDomandeDaPrendereInCaricaProvvisorio=Lista delle Domande di Accreditamento Provvisorie da prendere in carico
 label.listaDomandeDaPrendereInCaricaStandard=Lista delle Domande di Accreditamento Standard da prendere in carico
