fix label comunicazioni

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -527,7 +527,7 @@ label.nessun_messaggio_non_letto=Nessun messaggio ancora da leggere
 label.nessun_piano_formativo=Non ci sono piani formativi!
 label.nessun_provider=Non ci sono provider registrati!
 label.nessuna_comunicazione_ricevuta_ancora=Non è stata ancora ricevuta nessuna Comunicazione
-label.nessuna_comunicazione_tipologia=Nessuna Comunicazione {0}!
+label.nessuna_comunicazione_tipologia=Non ci sono Comunicazioni {0}!
 label.nessuna_disciplina=Nessuna disciplina selezionata
 label.nessuna_domanda_accreditamento=Non è presente nessuna domanda di accreditamento
 label.nessuna_domanda_selezionabile=Nessuna Domanda selezionabile
