implementata gestione liste degli eventi +  wip creazione evento

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -518,7 +518,7 @@ label.nazionalita=Nazionalità
 label.nd=N\\D
 label.nessun_allegato=Nessun allegato disponibile
 label.nessun_componente_comitato=Nessun componente del comitato scientifico inserito
-label.nessun_evento_list=Nessun evento disponibile
+label.nessun_evento_list=Non ci sono eventi!
 label.nessun_evento_piano_formativo=Nessun evento inserito nel piano formativo
 label.nessun_file_caricato=Nessun File caricato
 label.nessun_file_generato=Nessun File generato
@@ -833,3 +833,10 @@ month.marzo=Marzo
 month.novembre=Novembre
 month.ottobre=Ottobre
 month.settembre=Settembre
+label.lista_eventi=Lista degli Eventi
+label.lista_eventi_provider=Lista degli Eventi del Provider {0}
+label.nuovo_evento=Nuovo Evento
+label.creazione_evento=Creazione
+label.attuazione_evento=Attuazione
+label.riedizione_evento=Riedizione
+label.scelta_procedura_formativa_evento=Scelta della Procedura Formativa dell'Evento da inserire
